--- a/style.css
+++ b/style.css
@@ -1,27 +1,130 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,900;1,200&family=Open+Sans:ital,wght@0,300;0,700;1,400&family=Poppins:wght@600&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
+:root{
+    font-family: 'Nunito';
+    font-size: 12px;
+    color: #fff;
+}
+ion-icon {
+    /* color: rgb(255, 255, 255); */
+    font-size: 12px;
+  }
 
+
+/* HEADER SECTION  */
+header{
+    height: 80px;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 50px;
+}
+.logo-image{
+    width: 30px;
+    /* height: 30px; */
+}
+header button{
+    height: 30px;
+    padding: 0 15px;
+}
+.logo{
+    display: flex;
+}
+.logo h1{
+    font-size: 36px;
+    color: whitesmoke;
+}
+
+/* BODY  */
 body{
+    background-color: rgb(26, 22, 22);
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+section{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 0;
+
+}
+.cards{
+    width: 90%;
+    height: auto;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* FORM-PAGE  */
+#add-place-page{
+    width: 90%;
+    max-width: 760px;
+    margin: 60px auto;
+    background-color: rgb(14, 13, 13);
+   
+}
+#card-form{
     display: flex;
     flex-direction: column;
+    padding: 3rem;
 }
-header{
+.form-name{
     display: flex;
     justify-content: space-between;
-    padding: 0 60px;
-}
-main{
-    max-width: 500px;
-    margin: auto;
-}
-tr{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
 }
 
-/* section {
+/* RESULT SECTION  */
+.cards-result{
+    margin-top: 50px;
+    width: 90%;
+    display: grid;
+    grid-gap: 25px;
+    grid-template: auto / repeat(auto-fit, minmax(300px, 1fr));
+}
+.cards{
+    width: 100%;
+    border-radius: 8px;
+    background-color: rgb(37, 37, 37);
+    padding: 15px;
+    overflow: hidden;
+}
+.cards img{
+    width: 100%;
+    height: 200px;
+    border-radius: 4px;
+}
+.card-details{
     display: flex;
-} */
+    flex-direction: column;
+    height: 200px;
+}
+.card-title{
+    font-weight: 400;
+    margin-top: 10px;
+    margin-bottom: 18px;
+}
+.card-description{
+    margin-bottom: 20px;
+}
+.tagged-categories{
+    margin-top: 30px;
+}
+.tags{
+    display: inline;
+    padding: 5px;
+    background-color: rgb(102, 102, 102);
+}
